# CSCI5607-Assignment1d

./: CMakeLists.txt  README.md
scenes/: my-test-world.txt  simple-transparent-sphere-scene.txt
src/: GraphicsEngine.cpp  GraphicsEngine.hpp  InputFileParser.cpp  InputFileParser.hpp  PpmWriter.cpp  PpmWriter.hpp  TextureCache.cpp  TextureCache.hpp  main.cpp  tests.hpp
src/core/: ColorRGB.hpp  Light.hpp  Object.cpp  Object.hpp  Point.hpp  Ray.cpp  Ray.hpp  Texture.cpp  Texture.hpp  TextureCache.cpp  TextureCache.hpp  TypeDefinitions.hpp  Vector3D.cpp  Vector3D.hpp
